<resources>
    <string name="app_name">Shared Lists</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_capital_letter">You need to have a capital letter at least</string>
    <string name="error_lower_case">You need to have a lowercase at least</string>
    <string name="error_number">you need a number at least</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error">An error has occurred</string>
    <string name="new_member">You are not a member? create your account…</string>
    <string name="button_new_user">Create new user</string>
    <string name="account_alredy_exist">I am already a user, I have an account</string>
    <string name="title_activity_principal">Hello again!</string>
    <string name="remember_me">Remember me…</string>
    <string name="remember_email_send">Email sent…</string>
    <string name="error_remember_mail_send">Error sending the message, something has failed!</string>
    <string name="error_mail_required">Enter a valid email to reset the password</string>
    <string name="validate_email">Check your inbox and confirm your email address and try again…</string>
    <string name="in_box">Check your inbox and confirm your email address</string>

    <!--Menu Settings strings-->
    <string name="settings">Settings</string>
    <string name="policy">Privacy Policy</string>
    <string name="logout">Logout</string>

    <!--Settings strings-->
    <string name="account">Account</string>
    <string name="quetion_email"><u>You want to change the email?</u></string>
    <string name="question_pass"><u>You want to change the password?</u></string>
    <string name="question_delete"><u>You want to delete the account?</u></string>
    <string name="confirm_pass">Confirm password</string>
    <string name="input_email">Enter the new email</string>
    <string name="input_password">Enter the new password</string>
    <string name="validate_ema_pass">Confim changes</string>
    <string name="confirm_delete_account">Confirm delete account</string>
    <string name="equals_pass">The passwords do not match, try again</string>
    <string name="change_made">Changes made</string>
    <string name="error_change_email">Ups error in the changes</string>
    <string name="change_pass">Password changed</string>
    <string name="error_change_pass">Ups error in the changes</string>
    <string name="what_changes">What changes you want to make in your account?</string>
    <string name="select_item">Select item…</string>
    <string name="validate_ac">It is necessary to validate the account through email!</string>
    <string name="old_password">Old password</string>
    <string name="does_no_match">The old password does not match</string>
    <string name="note">Notes</string>
    <string name="shared_notes">Shared notes</string>
    <string name="votes">Vote</string>

    <!--Strings related settings Dialog Builder-->
    <string name="title">Change account</string>
    <string name="validate_other_account">You have successfully changed the account, we have sent you a validation email for the new account.
        The application will close and you have to return to login.</string>
    <string name="ok">OK!</string>

    <!--Strings related delete app-->
    <string name="title_delete">Important notice</string>
    <string name="message_delete">You are going to delete the application and your user account, are you sure?</string>
    <string name="no">No</string>

    <!--Strings upload photo-->
    <string name="upload_succeful">Image successfully uploaded to the server</string>
    <string name="upload_failed">Error uploading the image, try again.</string>

    <!--Strings related for delete photo-->
    <string name="delete_image_succeful">Image profile deleted!</string>
    <string name="delete_image_error">Error for delete image profile</string>
    <string name="delete_image_error_try">Error for delete image profile, try again…</string>

    <!--Descriptions images-->
    <string name="image_description">Image icon</string>
    <string name="size">14</string>
    
    <!--Main strings-->
    <string name="recovering_notes">Recovering notes, please wait…</string>

</resources>
