<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Settings.SettingsApp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/settings_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardUser"
        style="@style/CardViewUser"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/person_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/rivera"/>

            <TextView
                android:text="manolo1234"
                android:id="@+id/user_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/person_photo"
                android:textSize="30sp" />

            <TextView
                android:text="manolo@gmail.com"
                android:id="@+id/user_card_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_card_name"
                android:layout_toRightOf="@+id/person_photo" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_settings"
        style="@style/AbsoluteLinear"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardUser">

        <TextView
            android:id="@+id/question_changes"
            style="@style/TextQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_changes" />

        <Spinner
            android:id="@+id/spinner_settings"
            style="@style/SpinnerSettings">
        </Spinner>

        <EditText
            android:id="@+id/mail"
            style="@style/EditSettings"
            android:hint="@string/input_email" />

        <TextView
            android:id="@+id/change_email"
            style="@style/TextSettings"
            android:text="@string/validate_ema_pass" />

        <EditText
            android:id="@+id/password_old"
            style="@style/EditSettings"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password"
            style="@style/EditSettings"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/change_pass"
            style="@style/TextSettings"
            android:text="@string/validate_ema_pass" />

        <EditText
            android:id="@+id/password_for_delete"
            style="@style/EditSettings"
            android:hint="@string/confirm_pass"
            android:inputType="" />

        <TextView
            android:id="@+id/delete_account"
            style="@style/TextSettings"
            android:text="@string/confirm_delete_account" />

        <View
            style="@style/Separators"
            android:layout_marginTop="@dimen/xlarge_margin" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>