<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/settings_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rLayoutUser"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cardPhotoUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:src="@drawable/rivera" />

            <TextView
                android:id="@+id/cardMailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="manolo@gmail.com"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/xlarge_margin"
            android:layout_marginStart="@dimen/xlarge_margin"
            android:layout_marginTop="200dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Listas"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="14"
                        android:textColor="@color/violet"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Listas"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="14"
                        android:textColor="@color/violet"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Listas"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="14"
                        android:textColor="@color/violet"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_settings"
        style="@style/AbsoluteLinear"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rLayoutUser">

        <TextView
            android:id="@+id/question_changes"
            style="@style/TextQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_changes" />

        <Spinner
            android:id="@+id/spinner_settings"
            style="@style/SpinnerSettings"></Spinner>

        <EditText
            android:id="@+id/mail"
            style="@style/EditSettings"
            android:hint="@string/input_email" />

        <TextView
            android:id="@+id/change_email"
            style="@style/TextSettings"
            android:text="@string/validate_ema_pass" />

        <EditText
            android:id="@+id/password_old"
            style="@style/EditSettings"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password"
            style="@style/EditSettings"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/change_pass"
            style="@style/TextSettings"
            android:text="@string/validate_ema_pass" />

        <EditText
            android:id="@+id/password_for_delete"
            style="@style/EditSettings"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/delete_account"
            style="@style/TextSettings"
            android:text="@string/confirm_delete_account" />

        <View
            style="@style/Separators"
            android:layout_marginTop="@dimen/xlarge_margin" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>